Fix TOC overflowing

--- a/_sass/common/components/_toc.scss
+++ b/_sass/common/components/_toc.scss
@@ -3,14 +3,18 @@ ul.toc {
   margin: 0;
   @include css-var(color, "var(--text-color)");
   list-style-type: none;
+
   & > li {
+
     margin: map-get($spacers, 1) / 2 0;
+
     a { /* stylelint-disable-line selector-max-type */
       display: inline-block;
       margin: map-get($spacers, 1) / 4 0;
       text-decoration: none !important; /* stylelint-disable-line declaration-no-important */
     }
   }
+
   .toc-h1,
   .toc-h2,
   .toc-h3,
@@ -20,6 +24,7 @@ ul.toc {
     a {
       @extend .link, .link--highlight-text;
     }
+
     &.active {
       a {
         @extend .link, .link--primary;
@@ -33,42 +38,52 @@ ul.toc {
   .toc-h5,
   .toc-h6 {
     &, a {
+      text-wrap: balance;
       font-size: map-get($base, font-size-xs);
       font-weight: map-get($base, font-weight);
       line-height: map-get($base, line-height-xs);
     }
   }
+
   .toc-h1 {
     @include split-line(bottom);
     padding: map-get($spacers, 2) 0 map-get($spacers, 1) 0;
     margin-bottom: map-get($spacers, 2);
     @include css-var(color, "var(--text-color-d)");
+
     &, a {
       font-size: map-get($base, font-size-sm);
       font-weight: map-get($base, font-weight-bold);
       line-height: map-get($base, line-height-sm);
     }
+
     a {
       @extend .link, .link--highlight-text-d;
     }
   }
+
   .toc-h2 {
     &, a {
       font-weight: map-get($base, font-weight-bold);
     }
   }
+
   .toc-h3 {
     margin-left: map-get($spacers, 3);
   }
+
   .toc-h4 {
     margin-left: map-get($spacers, 3) * 2;
   }
+
   .toc-h5,
   .toc-h6 {
     margin-left: map-get($spacers, 3) * 3;
   }
+
   .toc-h6 {
     @include css-var(color, "var(--text-color-l)");
+
     a {
       @extend .link, .link--highlight-text-l;
     }
@@ -89,6 +104,7 @@ ul.toc--navigator {
       padding-left: map-get($spacers, 2);
       margin: map-get($spacers, 1) 0;
     }
+
     &.active {
       a { /* stylelint-disable-line selector-max-type */
         margin-left: -4px;
@@ -96,24 +112,30 @@ ul.toc--navigator {
       }
     }
   }
+
   .toc-h2,
   .toc-h3,
   .toc-h4 {
     @include css-var(color, "var(--text-color-l)");
+
     a {
       @extend .link, .link--text-l;
     }
   }
+
   .toc-h1 {
     &, a {
       font-size: map-get($base, font-size);
       line-height: map-get($base, line-height);
     }
+
     @include css-var(color, "var(--text-color)");
+
     a {
       @extend .link, .link--text-d;
     }
   }
+
   .toc-h2 {
     &, a {
       font-size: map-get($base, font-size-sm);
